--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -72,6 +72,8 @@ blake2 = { version = "^0.10.2", optional = true }
 blake3 = { version = "1.0", optional = true }
 chrono = { workspace = true }
 datafusion-common = { workspace = true }
+datafusion-pre-macros = { workspace = true }
+datafusion-macros = { workspace = true }
 datafusion-execution = { workspace = true }
 datafusion-expr = { workspace = true }
 hashbrown = { workspace = true, optional = true }
