--- a/datafusion/macros/Cargo.toml
+++ b/datafusion/macros/Cargo.toml
@@ -37,7 +37,7 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0.37"
-syn = "2.0.79"
+syn = { version = "2.0.79", features = ["full"] }
 proc-macro2 = "1.0"
 datafusion-pre-macros = { workspace = true }
 
