Do not push down filter through distinct on if filter might change the cardinality of the distinct on expressions.

--- a/datafusion/optimizer/Cargo.toml
+++ b/datafusion/optimizer/Cargo.toml
@@ -54,5 +54,6 @@ arrow-buffer = { workspace = true }
 ctor = { workspace = true }
 datafusion-functions-aggregate = { workspace = true }
 datafusion-functions-window-common = { workspace = true }
+datafusion-functions = { workspace = true }
 datafusion-sql = { workspace = true }
 env_logger = { workspace = true }
