--- a/datafusion/ffi/Cargo.toml
+++ b/datafusion/ffi/Cargo.toml
@@ -43,3 +43,5 @@ futures = { workspace = true }
 async-trait = { workspace = true }
 tokio = { workspace = true }
 prost = { workspace = true }
+abi_stable = "0.11.3"
+async-ffi = { version = "0.5.0", features = ["abi_stable"] }
