--- a/datafusion/sql/Cargo.toml
+++ b/datafusion/sql/Cargo.toml
@@ -50,6 +50,7 @@ log = { workspace = true }
 regex = { workspace = true }
 sqlparser = { workspace = true }
 strum = { version = "0.26.1", features = ["derive"] }
+indexmap = { workspace = true }
 
 [dev-dependencies]
 ctor = { workspace = true }
