Tokio only needed for unit tests

--- a/datafusion/ffi/Cargo.toml
+++ b/datafusion/ffi/Cargo.toml
@@ -45,4 +45,6 @@ datafusion-proto = { workspace = true }
 doc-comment = { workspace = true }
 futures = { workspace = true }
 prost = { workspace = true }
+
+[dev-dependencies]
 tokio = { workspace = true }
