--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,22 +70,22 @@ version = "42.1.0"
 ahash = { version = "0.8", default-features = false, features = [
     "runtime-rng",
 ] }
-arrow = { version = "53.1.0", features = [
+arrow = { version = "53.2.0", features = [
     "prettyprint",
 ] }
-arrow-array = { version = "53.1.0", default-features = false, features = [
+arrow-array = { version = "53.2.0", default-features = false, features = [
     "chrono-tz",
 ] }
-arrow-buffer = { version = "53.1.0", default-features = false }
-arrow-flight = { version = "53.1.0", features = [
+arrow-buffer = { version = "53.2.0", default-features = false }
+arrow-flight = { version = "53.2.0", features = [
     "flight-sql-experimental",
 ] }
-arrow-ipc = { version = "53.1.0", default-features = false, features = [
+arrow-ipc = { version = "53.2.0", default-features = false, features = [
     "lz4",
 ] }
-arrow-ord = { version = "53.1.0", default-features = false }
-arrow-schema = { version = "53.1.0", default-features = false }
-arrow-string = { version = "53.1.0", default-features = false }
+arrow-ord = { version = "53.2.0", default-features = false }
+arrow-schema = { version = "53.2.0", default-features = false }
+arrow-string = { version = "53.2.0", default-features = false }
 async-trait = "0.1.73"
 bigdecimal = "=0.4.1"
 bytes = "1.4"
@@ -126,7 +126,7 @@ log = "^0.4"
 num_cpus = "1.13.0"
 object_store = { version = "0.11.0", default-features = false }
 parking_lot = "0.12"
-parquet = { version = "53.1.0", default-features = false, features = [
+parquet = { version = "53.2.0", default-features = false, features = [
     "arrow",
     "async",
     "object_store",
@@ -169,3 +169,19 @@ large_futures = "warn"
 
 [workspace.lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }
+
+## Temporary arrow-rs patch until 52.2.0 is released
+
+[patch.crates-io]
+arrow = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-array = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-buffer = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-cast = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-data = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-ipc = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-schema = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-select = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-string = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-ord = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+arrow-flight = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
+parquet = { git = "https://github.com/apache/arrow-rs.git", rev = "0d271514407f11b4ee6985f204632515f3d8806a" }
