Provide log errors rather than failing silently on schema requests

--- a/datafusion/ffi/Cargo.toml
+++ b/datafusion/ffi/Cargo.toml
@@ -44,6 +44,7 @@ datafusion = { workspace = true }
 datafusion-proto = { workspace = true }
 doc-comment = { workspace = true }
 futures = { workspace = true }
+log = { workspace = true }
 prost = { workspace = true }
 
 [dev-dependencies]
