--- a/datafusion/ffi/Cargo.toml
+++ b/datafusion/ffi/Cargo.toml
@@ -40,7 +40,7 @@ abi_stable = "0.11.3"
 arrow = { workspace = true, features = ["ffi"] }
 async-ffi = { version = "0.5.0", features = ["abi_stable"] }
 async-trait = { workspace = true }
-datafusion = { workspace = true }
+datafusion = { workspace = true, default-features = false }
 datafusion-proto = { workspace = true }
 doc-comment = { workspace = true }
 futures = { workspace = true }
