--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -23,18 +23,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  rat:
-    name: Release Audit Tool (RAT)
+  license-header-check:
     runs-on: ubuntu-latest
+    name: Check License Header
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-      - name: Audit licenses
-        run: ./dev/release/run-rat.sh .
+      - uses: actions/checkout@v4
+      - uses: korandoru/hawkeye@v5
 
   prettier:
     name: Use prettier to check formatting of documents
