chore: Update to sqlparser-rs 0.52.0 pre-release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -144,7 +144,7 @@ rand = "0.8"
 regex = "1.8"
 rstest = "0.23.0"
 serde_json = "1"
-sqlparser = { version = "0.51.0", features = ["visitor"] }
+sqlparser = { version = "0.52.0", features = ["visitor"], git = "https://github.com/apache/datafusion-sqlparser-rs.git", rev = "a4aa6e28d68b83099db77e594e9209d85820ec96" }
 tempfile = "3"
 tokio = { version = "1.36", features = ["macros", "rt", "sync"] }
 url = "2.2"
