--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,6 +142,7 @@ prost = "0.13.1"
 prost-derive = "0.13.1"
 rand = "0.8"
 regex = "1.8"
+recursive = "0.1.1"
 rstest = "0.23.0"
 serde_json = "1"
 sqlparser = { version = "0.51.0", features = ["visitor"] }
