--- a/datafusion/common/Cargo.toml
+++ b/datafusion/common/Cargo.toml
@@ -61,6 +61,7 @@ libc = "0.2.140"
 num_cpus = { workspace = true }
 object_store = { workspace = true, optional = true }
 parquet = { workspace = true, optional = true, default-features = true }
+recursive = { workspace = true }
 paste = "1.0.15"
 pyo3 = { version = "0.22.0", optional = true }
 sqlparser = { workspace = true }
