refactor: replace `instant` with `web-time`
See https://rustsec.org/advisories/RUSTSEC-2024-0384.html .

--- a/datafusion/common/Cargo.toml
+++ b/datafusion/common/Cargo.toml
@@ -67,7 +67,7 @@ sqlparser = { workspace = true }
 tokio = { workspace = true }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-instant = { version = "0.1", features = ["wasm-bindgen"] }
+web-time = "1.1.0"
 
 [dev-dependencies]
 rand = { workspace = true }
