modify vectorized_equal_to interface, and add bench.

--- a/datafusion/physical-plan/Cargo.toml
+++ b/datafusion/physical-plan/Cargo.toml
@@ -78,6 +78,7 @@ tokio = { workspace = true, features = [
     "fs",
     "parking_lot",
 ] }
+test-utils = { path = "../../test-utils" }
 
 [[bench]]
 harness = false
