--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ members = [
     "test-utils",
     "benchmarks",
     "datafusion/macros",
-    "datafusion/doc-gen"
+    "datafusion/doc-gen",
 ]
 resolver = "2"
 
@@ -102,6 +102,7 @@ datafusion = { path = "datafusion/core", version = "43.0.0", default-features = 
 datafusion-catalog = { path = "datafusion/catalog", version = "43.0.0" }
 datafusion-common = { path = "datafusion/common", version = "43.0.0", default-features = false }
 datafusion-common-runtime = { path = "datafusion/common-runtime", version = "43.0.0" }
+datafusion-doc-gen = { path = "datafusion/doc-gen", version = "43.0.0" }
 datafusion-execution = { path = "datafusion/execution", version = "43.0.0" }
 datafusion-expr = { path = "datafusion/expr", version = "43.0.0" }
 datafusion-expr-common = { path = "datafusion/expr-common", version = "43.0.0" }
@@ -118,7 +119,6 @@ datafusion-physical-expr = { path = "datafusion/physical-expr", version = "43.0.
 datafusion-physical-expr-common = { path = "datafusion/physical-expr-common", version = "43.0.0", default-features = false }
 datafusion-physical-optimizer = { path = "datafusion/physical-optimizer", version = "43.0.0" }
 datafusion-physical-plan = { path = "datafusion/physical-plan", version = "43.0.0" }
-datafusion-doc-gen = { path = "datafusion/doc-gen", version = "43.0.0" }
 datafusion-proto = { path = "datafusion/proto", version = "43.0.0" }
 datafusion-proto-common = { path = "datafusion/proto-common", version = "43.0.0" }
 datafusion-sql = { path = "datafusion/sql", version = "43.0.0" }
