--- a/datafusion/macros/Cargo.toml
+++ b/datafusion/macros/Cargo.toml
@@ -36,7 +36,7 @@ path = "src/lib.rs"
 proc-macro = true
 
 [dependencies]
-datafusion-doc-gen = { workspace = true }
+datafusion-doc = { workspace = true }
 proc-macro2 = "1.0"
 quote = "1.0.37"
 syn = { version = "2.0.79", features = ["full"] }
