--- a/datafusion/doc/Cargo.toml
+++ b/datafusion/doc/Cargo.toml
@@ -31,5 +31,5 @@ rust-version = { workspace = true }
 workspace = true
 
 [lib]
-name = "datafusion_doc_gen"
+name = "datafusion_doc"
 path = "src/lib.rs"
