--- a/datafusion/core/Cargo.toml
+++ b/datafusion/core/Cargo.toml
@@ -147,6 +147,7 @@ datafusion-functions-window-common = { workspace = true }
 doc-comment = { workspace = true }
 env_logger = { workspace = true }
 half = { workspace = true, default-features = true }
+object_store = { workspace = true, features = ["aws", "http"] }
 paste = "^1.0"
 postgres-protocol = "0.6.4"
 postgres-types = { version = "0.2.4", features = ["derive", "with-chrono-0_4"] }
