--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,9 @@ datafusion/sqllogictests/test_files/tpch/data/*
 # Scratch temp dir for sqllogictests
 datafusion/sqllogictest/test_files/scratch*
 
+# temp file for core
+datafusion/core/*.parquet
+
 # rat
 filtered_rat.txt
 rat.txt
