--- a/datafusion/core/Cargo.toml
+++ b/datafusion/core/Cargo.toml
@@ -161,6 +161,10 @@ name = "aggregate_query_sql"
 
 [[bench]]
 harness = false
+name = "csv_load"
+
+[[bench]]
+harness = false
 name = "distinct_query_sql"
 
 [[bench]]
