--- a/Cargo.toml
+++ b/Cargo.toml
@@ -177,3 +177,7 @@ large_futures = "warn"
 [workspace.lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }
 unused_qualifications = "deny"
+
+## Temp patch for sqlparser
+[patch.crates-io]
+sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs.git", rev = "d0fcc06652ba9880622d0ef8b426c809cee752fe" }
