--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,6 +122,7 @@ datafusion-proto = { path = "datafusion/proto", version = "43.0.0" }
 datafusion-proto-common = { path = "datafusion/proto-common", version = "43.0.0" }
 datafusion-sql = { path = "datafusion/sql", version = "43.0.0" }
 doc-comment = "0.3"
+enumset = "1.1.5"
 env_logger = "0.11"
 futures = "0.3"
 half = { version = "2.2.1", default-features = false }
