--- a/Cargo.toml
+++ b/Cargo.toml
@@ -177,3 +177,18 @@ large_futures = "warn"
 [workspace.lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }
 unused_qualifications = "deny"
+
+# Temp patch to main of arrow-rs
+[patch.crates-io]
+arrow = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-array = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-buffer = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-cast = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-data = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-ipc = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-schema = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-select = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-string = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-ord = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-flight = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+parquet = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
