--- a/datafusion-cli/Cargo.toml
+++ b/datafusion-cli/Cargo.toml
@@ -69,3 +69,18 @@ assert_cmd = "2.0"
 ctor = "0.2.0"
 predicates = "3.0"
 rstest = "0.22"
+
+# Temp patch to main of arrow-rs
+[patch.crates-io]
+arrow = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-array = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-buffer = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-cast = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-data = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-ipc = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-schema = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-select = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-string = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-ord = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+arrow-flight = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
+parquet = { git = "https://github.com/apache/arrow-rs.git", rev = "54dccadccc6b599b93a46aef5f03dfd4d9b7349e" }
