--- a/datafusion/substrait/Cargo.toml
+++ b/datafusion/substrait/Cargo.toml
@@ -42,9 +42,7 @@ object_store = { workspace = true }
 pbjson-types = "0.7"
 # TODO use workspace version
 prost = "0.13"
-# The MSRV of substrait@0.49.5 is 1.80.1, which is higher than ours.
-# TODO: Update this version constraint when DataFusion updates its MSRV.
-substrait = { version = ">=0.49.0, <0.49.5", features = ["serde"] }
+substrait = { version = "0.49", features = ["serde"] }
 url = { workspace = true }
 
 [dev-dependencies]
