Increase minimum supported Rust version (MSRV) to 1.80.1  (#13667)
* Increase minimum supported Rust version (MSRV) to 1.80.1

We currently require 1.80, but we also say that

> If a hotfix is released for the minimum supported Rust version (MSRV),
> the MSRV will be the minor version with all hotfixes

therefore we should requite 1.80.1 and thus allow dependencies that
require 1.80.1 (such as substrait)

* Revert "fix: cargo msrv check failed (#13654)"

This reverts commit c510ab46fcb1148052bb8999e423360b4c17ecdf.

--- a/datafusion/substrait/Cargo.toml
+++ b/datafusion/substrait/Cargo.toml
@@ -26,7 +26,7 @@ repository = { workspace = true }
 license = { workspace = true }
 authors = { workspace = true }
 # Specify MSRV here as `cargo msrv` doesn't support workspace version
-rust-version = "1.80"
+rust-version = "1.80.1"
 
 [lints]
 workspace = true
@@ -42,9 +42,7 @@ object_store = { workspace = true }
 pbjson-types = "0.7"
 # TODO use workspace version
 prost = "0.13"
-# The MSRV of substrait@0.49.5 is 1.80.1, which is higher than ours.
-# TODO: Update this version constraint when DataFusion updates its MSRV.
-substrait = { version = ">=0.49.0, <0.49.5", features = ["serde"] }
+substrait = { version = "0.49", features = ["serde"] }
 url = { workspace = true }
 
 [dev-dependencies]
