Add snap to CLI & set up AWS mock

--- a/datafusion-cli/Cargo.toml
+++ b/datafusion-cli/Cargo.toml
@@ -67,3 +67,5 @@ assert_cmd = "2.0"
 ctor = "0.2.0"
 predicates = "3.0"
 rstest = "0.22"
+insta = { version = "1.41.1", features = ["glob", "filters"] }
+insta-cmd = "0.6.0"
