rename macro lib to user_doc

--- a/datafusion/macros/Cargo.toml
+++ b/datafusion/macros/Cargo.toml
@@ -32,7 +32,8 @@ workspace = true
 
 [lib]
 name = "datafusion_macros"
-path = "src/lib.rs"
+# lib.rs to be re-added in the future
+path = "src/user_doc.rs"
 proc-macro = true
 
 [dependencies]
