CI: Windows compilation time

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,9 +51,8 @@ jobs:
       - name: Run tests (excluding doctests)
         shell: bash
         run: |
-          export RUSTFLAGS="-C link-arg=-fuse-ld=lld -C target-cpu=native"
           export PATH=$PATH:$HOME/d/protoc/bin
-          cargo test --lib --tests --bins --features avro,json,backtrace
+          RUSTFLAGS="-C codegen-units=16 -C link-arg=-fuse-ld=lld -C target-cpu=native -C incremental=yes -C lto=thin -C debuginfo=0" cargo test --lib --tests --bins --features avro,json,backtrace
           cd datafusion-cli
-          cargo test --lib --tests --bins --all-features
+          RUSTFLAGS="-C codegen-units=16 -C link-arg=-fuse-ld=lld -C target-cpu=native -C incremental=yes -C lto=thin -C debuginfo=0" cargo test --lib --tests --bins --all-features
 
