--- a/.github/actions/setup-rust-runtime/action.yaml
+++ b/.github/actions/setup-rust-runtime/action.yaml
@@ -34,5 +34,4 @@ runs:
         echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV  
         echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV 
         echo "RUST_BACKTRACE=1" >> $GITHUB_ENV
-        echo "RUSTFLAGS=-C debuginfo=line-tables-only -C incremental=false" >> $GITHUB_ENV
-     
+        echo "RUSTFLAGS=-C debuginfo=line-tables-only -C incremental=false -C codegen-units=16 -C link-arg=-fuse-ld=lld -C target-cpu=native" >> $GITHUB_ENV
