CI: Windows compilation time

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,7 +52,7 @@ jobs:
         shell: bash
         run: |
           export PATH=$PATH:$HOME/d/protoc/bin
-          set RUSTFLAGS=-C codegen-units=16 -C link-arg=-fuse-ld=lld -C target-cpu=native -C incremental=false -C debuginfo=line-tables-only -Z threads=8
+          export RUSTFLAGS="-C codegen-units=16 -C link-arg=-fuse-ld=lld -C target-cpu=native -C incremental=false -C debuginfo=line-tables-only -Z threads=8"
           echo $RUSTFLAGS
           cargo test --lib --tests --bins --features avro,json,backtrace
           cd datafusion-cli
