--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -177,7 +177,7 @@ jobs:
         run: |
           rustup toolchain install stable
           rustup default stable
-      - name: Setup S3-compatible storage
+      - name: Setup Minio - S3-compatible storage
         working-directory: datafusion-cli
         run: |
           echo "MINIO_CONTAINER=$(docker run -d -p 9000:9000 -e MINIO_ROOT_USER=DataFusionLogin -e MINIO_ROOT_PASSWORD=DataFusionPassword quay.io/minio/minio server /data)" >> $GITHUB_ENV
@@ -191,6 +191,9 @@ jobs:
         run: cargo test --lib --tests --bins --all-features
       - name: Verify Working Directory Clean
         run: git diff --exit-code
+      - name: Minio Output
+        if: ${{ !cancelled() }}
+        run: docker logs $MINIO_CONTAINER
 
   linux-test-example:
     name: cargo examples (amd64)
