--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           export PATH=$PATH:$HOME/d/protoc/bin
           echo $RUSTFLAGS
-          cargo test --lib --tests --bins --features avro,json,backtrace --profile release-nonlto
+          cargo test --lib --tests --bins --features avro,json,backtrace --profile windows
           cd datafusion-cli
-          cargo test --lib --tests --bins --all-features --profile release-nonlto
+          cargo test --lib --tests --bins --all-features --profile windows
 
