--- a/Cargo.toml
+++ b/Cargo.toml
@@ -171,16 +171,21 @@ panic = 'unwind'
 rpath = false
 
 [profile.release-windows]
-codegen-units = 1024
+codegen-units = 16
 debug = 'line-directives-only'
 debug-assertions = false
-incremental = true
+incremental = false
 inherits = "release"
 lto = false
-opt-level = 1
+opt-level = 3
 overflow-checks = false
 panic = 'unwind'
 rpath = false
+
+[profile.release-windows.build-override]
+opt-level = 0
+codegen-units = 256
+debug = false
 
 [workspace.lints.clippy]
 # Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
