--- a/datafusion/expr/Cargo.toml
+++ b/datafusion/expr/Cargo.toml
@@ -38,10 +38,7 @@ path = "src/lib.rs"
 [features]
 
 [dependencies]
-ahash = { workspace = true }
 arrow = { workspace = true }
-arrow-array = { workspace = true }
-arrow-buffer = { workspace = true }
 chrono = { workspace = true }
 datafusion-common = { workspace = true }
 datafusion-doc = { workspace = true }
@@ -54,9 +51,11 @@ paste = "^1.0"
 recursive = { workspace = true }
 serde_json = { workspace = true }
 sqlparser = { workspace = true }
-strum = { version = "0.26.1", features = ["derive"] }
-strum_macros = "0.26.0"
 
 [dev-dependencies]
+#arrow-array = { workspace = true }
+#arrow-buffer = { workspace = true }
 ctor = { workspace = true }
 env_logger = { workspace = true }
+#strum = { version = "0.26.1", features = ["derive"] }
+#strum_macros = "0.26.0"
