--- a/datafusion/execution/Cargo.toml
+++ b/datafusion/execution/Cargo.toml
@@ -37,7 +37,6 @@ path = "src/lib.rs"
 
 [dependencies]
 arrow = { workspace = true }
-chrono = { workspace = true }
 dashmap = { workspace = true }
 datafusion-common = { workspace = true, default-features = true }
 datafusion-expr = { workspace = true }
@@ -48,3 +47,6 @@ parking_lot = { workspace = true }
 rand = { workspace = true }
 tempfile = { workspace = true }
 url = { workspace = true }
+
+[dev-dependencies]
+chrono = { workspace = true }
